# thread_system

./: .clang-tidy  .cppcheck  .gitignore  ANALYSIS_README.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BASELINE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_IMPROVEMENT_SRD.md  DESIGN_IMPROVEMENTS.md  DOC_REVIEW_REPORT.md  Doxyfile  EXPLORATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_KO.md  IMPROVEMENT_PLAN.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  LICENSE-THIRD-PARTY  METRICS_IMPLEMENTATION_REPORT.md  MIGRATION.md  MIGRATION_STATUS.md  MIGRATION_TO_STD_FORMAT.md  NEED_TO_FIX.md  README.kr.md  README.md  README_KO.md  README_KO_UPDATE_NOTES.md  SECURITY.md  THREAD_SYSTEM_CAPABILITIES_SUMMARY.md  WORK_PROCEDURES.md  _2home_2runner_2work_2thread_system_2thread_system_2include_2kcenon_2thread_2core_2atomic_shared_ptr_8h-example.html  _2home_2runner_2work_2thread_system_2thread_system_2include_2kcenon_2thread_2core_2job_builder_8h-example.html  (+5879 more)
benchmarks/: BASELINE.md  CMakeLists.txt  README.md  baseline_metrics.cpp  comparison_benchmark.cpp  data_race_benchmark.cpp  framework.h  logger_benchmark.cpp  memory_benchmark.cpp  real_world_benchmark.cpp  stress_test_benchmark.cpp  thread_pool_benchmark.cpp  throughput_detailed_benchmark.cpp
benchmarks/logger_benchmarks/: CMakeLists.txt  lockfree_logger_benchmark.cpp  logger_benchmark.cpp  logger_comparison_benchmark.cpp  logging_throughput_benchmark.cpp
benchmarks/monitoring_benchmarks/: CMakeLists.txt  basic_benchmark.cpp  monitoring_overhead_benchmark.cpp  simple_benchmark.cpp
benchmarks/priority_thread_pool_benchmarks/: CMakeLists.txt  priority_scheduling_benchmark.cpp
benchmarks/thread_base_benchmarks/: CMakeLists.txt  mpmc_performance_test.cpp  quick_mpmc_test.cpp  quick_mpmc_test_google.cpp  simple_mpmc_benchmark.cpp
benchmarks/thread_pool_benchmarks/: CMakeLists.txt  benchmark_common.h  comparison_benchmark.cpp  contention_benchmark.cpp  gbench_thread_pool.cpp  lockfree_comparison_benchmark.cpp  lockfree_performance_benchmark.cpp  memory_benchmark.cpp  real_world_benchmark.cpp  scalability_benchmark.cpp  stress_test_benchmark.cpp  thread_pool_benchmark.cpp  throughput_detailed_benchmark.cpp  work_stealing_benchmark.cpp
benchmarks/typed_thread_pool_benchmarks/: CMakeLists.txt  queue_comparison_benchmark.cpp  typed_lockfree_benchmark.cpp  typed_scheduling_benchmark.cpp  typed_scheduling_benchmark_google.cpp
core/: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/adaptive_queue_sample/: CMakeLists.txt  adaptive_queue_sample.cpp
examples/composition_example/: composition_example.cpp
examples/config_example/: CMakeLists.txt  config_example.cpp
examples/crash_protection/: main.cpp
examples/hazard_pointer_sample/: hazard_pointer_sample.cpp
examples/integration_example/: integration_example.cpp  mock_logger.h  mock_monitoring.h
examples/job_cancellation_example/: CMakeLists.txt  job_cancellation_example.cpp
examples/logger_sample/: logger_sample.cpp
examples/minimal_thread_pool/: CMakeLists.txt  minimal_thread_pool.cpp
examples/mpmc_queue_sample/: mpmc_queue_sample.cpp
examples/multi_process_monitoring_integration/: multi_process_monitoring_integration.cpp
examples/node_pool_sample/: node_pool_sample.cpp
examples/queue_capabilities_sample/: CMakeLists.txt  queue_capabilities_sample.cpp
examples/queue_factory_sample/: CMakeLists.txt  queue_factory_sample.cpp
examples/service_registry_sample/: main.cpp
examples/thread_pool_sample/: thread_pool_sample.cpp
examples/typed_job_queue_sample/: typed_job_queue_sample.cpp
examples/typed_thread_pool_sample/: typed_thread_pool_sample.cpp
examples/typed_thread_pool_sample_2/: test_type.h  typed_thread_pool_sample_2.cpp
implementations/lockfree/: CMakeLists.txt
implementations/thread_pool/: CMakeLists.txt
implementations/typed_thread_pool/: CMakeLists.txt
integration_tests/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
integration_tests/failures/: error_handling_test.cpp
integration_tests/framework/: system_fixture.h  test_helpers.h
integration_tests/integration/: adaptive_queue_integration_test.cpp  backpressure_integration_test.cpp  diagnostics_integration_test.cpp  error_recovery_test.cpp  ilogger_di_integration_test.cpp  job_queue_concurrency_test.cpp  policy_queue_integration_test.cpp  queue_factory_integration_test.cpp  queue_performance_comparison_test.cpp  thread_pool_lifecycle_test.cpp
integration_tests/performance/: latency_benchmark.cpp  scalability_benchmark.cpp  thread_pool_performance_test.cpp  throughput_benchmark.cpp  work_stealing_benchmark.cpp
integration_tests/scenarios/: job_queue_integration_test.cpp  mode_transition_scenario_test.cpp  thread_pool_lifecycle_test.cpp
integration_tests/smoke/: basic_error_handling_smoke.cpp  basic_job_execution_smoke.cpp  basic_lifecycle_smoke.cpp
integration_tests/stress/: sustained_load_stress.cpp
interfaces/: CMakeLists.txt  README.md  executor_interface.h  logger_interface.cpp  monitorable_interface.h  scheduler_interface.h  thread_context.h
samples/: CMakeLists.txt
samples/adaptive_queue_sample/: CMakeLists.txt  adaptive_queue_sample.cpp
samples/composition_example/: CMakeLists.txt  composition_example.cpp
samples/crash_protection/: main.cpp
samples/hazard_pointer_sample/: CMakeLists.txt  hazard_pointer_sample.cpp
samples/integration_example/: CMakeLists.txt  integration_example.cpp  mock_logger.h  mock_monitoring.h
samples/lockfree_thread_pool_sample/: CMakeLists.txt  lockfree_thread_pool_sample.cpp
samples/lockfree_typed_thread_pool_sample/: CMakeLists.txt  lockfree_typed_thread_pool_sample.cpp
samples/logger_sample/: CMakeLists.txt  logger_sample.cpp  performance_test.cpp
samples/logger_samples/: lockfree_logger_sample.cpp
samples/metrics_sample/: CMakeLists.txt  metrics_sample.cpp
samples/minimal_thread_pool/: CMakeLists.txt  (+1 more)
sources/: CMakeLists.txt
tests/: CMakeLists.txt
unittest/: CMakeLists.txt
utilities/: CMakeLists.txt
(+5081 files in other folders)
